# dotWombat

./: .bashrc  .emacs  .ghci  .gitconfig  .gitignore  .offlineimaprc  .stylish-haskell.yaml  .xinitrc  .zshrc  README.md  bashrc  config  dotfilesrc  emacs  ghci  xinitrc
.cabal/: config
.config/: lesskey  starship.toml.mustache.pastel-powerline
.config/alacritty/: alacritty.yml  alacritty.yml.mustache
.config/base16-universal-manager/: config.yaml
.config/bash/: bashrc
.config/emacs/: agda.el  awk.el  idris.el  init.el  keys.el  nix.el  org-coq.el  org.el
.config/foot/: colours.ini  colours.ini.WORKS  colours.mustache  foot.ini  foot.mustache  tinted.mustache
.config/fuzzel/: colours.ini  colours.ini.mustache  fuzzel.ini
.config/git/: config
.config/hikari/: hikari.conf
.config/kitty/: kitty.conf
.emacs.d/: c.el  coq.el  emacs-lisp.el  haskell.el  idris-repl.el  idris.el  init.el  keys.el  makefile.el  markdown.el  org.el  python.el  tex.el  text.el  whe.el
.stack/: config.yaml
.unison/: default.prf
etc/nixos/: R.nix  (+2 more)
nix-overlays/: default.nix  overlays.nix
nix-overlays/jot/: Jot.cabal  Jot.hs  README.md  default.nix  jot.nix  release.nix.SAVE
nixos/: R.nix  adebuitleir-paws.nix  base.nix  configuration.nix.template  containers.nix  eamybut-nixos.nix  emacs.nix  locale.nix  packages.nix  python2.nix  python3.nix  wombat11k.nix  wombat11k.nix.template  wombat9000.nix  xserver.nix
themes/: amy.json  amy2.json  amy3.json  amy4.json  default.json  garish.json  html.mustache  hue-order.yaml  hues.yaml  roles.yaml
wm-keymaps/: default.json
(+90 files in other folders)
