Name:              Jot
Version:           1.2
Description:       Quick note jotter
License:           PublicDomain
Author:            Amy de Buitléir
Maintainer:        amy@nualeargais.ie
Build-Type:        Simple
Cabal-Version:     >=1.2

Executable jot
  Main-Is:         Jot.hs
  GHC-Options:     -Wall
  Build-Depends:   base >= 4 && < 5, 
                   cmdargs ==0.10.*, 
                   directory ==1.3.*,
                   time ==1.*, 
                   filepath ==1.4.*,
                   process ==1.6.*
